{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 18,
  "lineage": "89072053-ea7e-d517-6e47-2e8f12616628",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "aks_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "acr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow ACR from source",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "5000",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/951bcc00-e52a-44a9-8418-8d09f849a003/resourceGroups/RG_Rdam_LZ_DAPR_SAS_Network/providers/Microsoft.Network/networkSecurityGroups/NSG_Rdam_LZ_DAPR_SAS/securityRules/SAS-ACR",
            "name": "SAS-ACR",
            "network_security_group_name": "NSG_Rdam_LZ_DAPR_SAS",
            "priority": 180,
            "protocol": "Tcp",
            "resource_group_name": "RG_Rdam_LZ_DAPR_SAS_Network",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.246.0.0/21"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg.azurerm_network_security_group.nsg",
            "module.nsg.data.azurerm_network_security_group.nsg",
            "module.resource_group.azurerm_resource_group.azure_rg",
            "module.resource_group.data.azurerm_resource_group.azure_rg"
          ]
        }
      ]
    },
    {
      "module": "module.nfs[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/951bcc00-e52a-44a9-8418-8d09f849a003/resourceGroups/RG_Rdam_LZ_DAPR_SAS/providers/Microsoft.Network/networkInterfaces/rdam-lz-dapr-sas-nfs-nic",
            "internal_domain_name_suffix": "qqgbfnjqvezu5jay3ithb2adze.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "rdam-lz-dapr-sas-nfs-ip_config",
                "primary": true,
                "private_ip_address": "10.246.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/951bcc00-e52a-44a9-8418-8d09f849a003/resourceGroups/RG_Rdam_LZ_DAPR_SAS_Network/providers/Microsoft.Network/virtualNetworks/VNET_Rdam_DAPR_SAS/subnets/N-10.246.1.0_24"
              }
            ],
            "location": "westeurope",
            "name": "rdam-lz-dapr-sas-nfs-nic",
            "private_ip_address": "10.246.1.4",
            "private_ip_addresses": [
              "10.246.1.4"
            ],
            "resource_group_name": "RG_Rdam_LZ_DAPR_SAS"
          },
          "dependencies": [
            "module.nfs.azurerm_public_ip.vm_ip",
            "module.resource_group.azurerm_resource_group.azure_rg",
            "module.resource_group.data.azurerm_resource_group.azure_rg",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_subnet.subnet",
            "module.vnet.data.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nfs[0]",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "vm_nic_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/951bcc00-e52a-44a9-8418-8d09f849a003/resourceGroups/RG_Rdam_LZ_DAPR_SAS/providers/Microsoft.Network/networkInterfaces/rdam-lz-dapr-sas-nfs-nic|/subscriptions/951bcc00-e52a-44a9-8418-8d09f849a003/resourceGroups/RG_Rdam_LZ_DAPR_SAS_Network/providers/Microsoft.Network/networkSecurityGroups/NSG_Rdam_LZ_DAPR_SAS",
            "network_interface_id": "/subscriptions/951bcc00-e52a-44a9-8418-8d09f849a003/resourceGroups/RG_Rdam_LZ_DAPR_SAS/providers/Microsoft.Network/networkInterfaces/rdam-lz-dapr-sas-nfs-nic",
            "network_security_group_id": "/subscriptions/951bcc00-e52a-44a9-8418-8d09f849a003/resourceGroups/RG_Rdam_LZ_DAPR_SAS_Network/providers/Microsoft.Network/networkSecurityGroups/NSG_Rdam_LZ_DAPR_SAS"
          },
          "dependencies": [
            "module.nfs.azurerm_network_interface.vm_nic",
            "module.nfs.azurerm_public_ip.vm_ip",
            "module.nsg.azurerm_network_security_group.nsg",
            "module.nsg.data.azurerm_network_security_group.nsg",
            "module.resource_group.azurerm_resource_group.azure_rg",
            "module.resource_group.data.azurerm_resource_group.azure_rg",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.vnet.data.azurerm_subnet.subnet",
            "module.vnet.data.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/951bcc00-e52a-44a9-8418-8d09f849a003/resourceGroups/RG_Rdam_LZ_DAPR_SAS_Network/providers/Microsoft.Network/networkSecurityGroups/NSG_Rdam_LZ_DAPR_SAS",
            "location": "westeurope",
            "name": "NSG_Rdam_LZ_DAPR_SAS",
            "resource_group_name": "RG_Rdam_LZ_DAPR_SAS_Network",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "aks",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.246.4.0/23",
            "address_prefixes": [
              "10.246.4.0/23"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/951bcc00-e52a-44a9-8418-8d09f849a003/resourceGroups/RG_Rdam_LZ_DAPR_SAS_Network/providers/Microsoft.Network/virtualNetworks/VNET_Rdam_DAPR_SAS/subnets/N-10.246.4.0_23",
            "name": "N-10.246.4.0_23",
            "network_security_group_id": "/subscriptions/951bcc00-e52a-44a9-8418-8d09f849a003/resourceGroups/RG_Rdam_LZ_DAPR_SAS_Network/providers/Microsoft.Network/networkSecurityGroups/NSG_Rdam_LZ_DAPR_SAS",
            "resource_group_name": "RG_Rdam_LZ_DAPR_SAS_Network",
            "virtual_network_name": "VNET_Rdam_DAPR_SAS"
          }
        },
        {
          "index_key": "misc",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.246.1.0/24",
            "address_prefixes": [
              "10.246.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/951bcc00-e52a-44a9-8418-8d09f849a003/resourceGroups/RG_Rdam_LZ_DAPR_SAS_Network/providers/Microsoft.Network/virtualNetworks/VNET_Rdam_DAPR_SAS/subnets/N-10.246.1.0_24",
            "name": "N-10.246.1.0_24",
            "network_security_group_id": "/subscriptions/951bcc00-e52a-44a9-8418-8d09f849a003/resourceGroups/RG_Rdam_LZ_DAPR_SAS_Network/providers/Microsoft.Network/networkSecurityGroups/NSG_Rdam_LZ_DAPR_SAS",
            "resource_group_name": "RG_Rdam_LZ_DAPR_SAS_Network",
            "virtual_network_name": "VNET_Rdam_DAPR_SAS"
          }
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.246.0.0/21"
            ],
            "guid": "b5120c84-a930-4f33-a418-ea2670f003cc",
            "id": "/subscriptions/951bcc00-e52a-44a9-8418-8d09f849a003/resourceGroups/RG_Rdam_LZ_DAPR_SAS_Network/providers/Microsoft.Network/virtualNetworks/VNET_Rdam_DAPR_SAS",
            "location": "westeurope",
            "name": "VNET_Rdam_DAPR_SAS",
            "resource_group_name": "RG_Rdam_LZ_DAPR_SAS_Network",
            "subnets": [
              "N-10.246.0.0_24",
              "AzureBastionSubnet",
              "N-10.246.1.0_24",
              "N-10.246.4.0_23"
            ]
          }
        }
      ]
    }
  ]
}